"Performed some changes on string jupyter fiile"

--- a/BasicQuestions/String.ipynb
+++ b/BasicQuestions/String.ipynb
@@ -18,21 +18,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Programing\n",
-      "Programing\n",
-      "Programing\n",
-      "Programing\n",
-      "Programing\n",
-      "Programing\n",
-      "Programing\n",
-      "Programing\n",
-      "Programing\n",
-      "Programing\n"
+      "Data\n",
+      "Data\n",
+      "Data\n",
+      "Data\n"
      ]
     }
    ],
    "source": [
-    "S = \"Programing\"\n",
+    "S = \"Data\"\n",
     "index = 0\n",
     "while index < len(S):\n",
     "    print(S)\n",
@@ -51,24 +45,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c8a9deee-5dd0-482c-ac93-cc8c30f46afc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'vyasKundan'"
+       "'Kundan Vyas'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "str1 = \"Kundan\"\n",
-    "str2 = \"vyas\"+ str1\n",
+    "str2 = str1 +\" Vyas\"\n",
     "str2"
    ]
   },
@@ -301,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "d7ca67b7-95d2-4d66-a8f2-2c9378ae4eb6",
    "metadata": {},
    "outputs": [],
@@ -311,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "98167c31-2a32-45dc-af9d-5deb044d2148",
    "metadata": {},
    "outputs": [
@@ -321,7 +315,7 @@
        "'PythonPythonPython'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "3675d7f2-37b0-4ad1-95b9-fd154c13bcd7",
    "metadata": {},
    "outputs": [
