--- a/BasicQuestions/String.ipynb
+++ b/BasicQuestions/String.ipynb
@@ -18,15 +18,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data\n",
-      "Data\n",
-      "Data\n",
-      "Data\n"
+      "Programing\n",
+      "Programing\n",
+      "Programing\n",
+      "Programing\n",
+      "Programing\n",
+      "Programing\n",
+      "Programing\n",
+      "Programing\n",
+      "Programing\n",
+      "Programing\n"
      ]
     }
    ],
    "source": [
-    "S = \"Data\"\n",
+    "S = \"Programing\"\n",
     "index = 0\n",
     "while index < len(S):\n",
     "    print(S)\n",
@@ -45,24 +51,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c8a9deee-5dd0-482c-ac93-cc8c30f46afc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Kundan Vyas'"
+       "'vyasKundan'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "str1 = \"Kundan\"\n",
-    "str2 = str1 +\" Vyas\"\n",
+    "str2 = \"vyas\"+ str1\n",
     "str2"
    ]
   },
@@ -295,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "d7ca67b7-95d2-4d66-a8f2-2c9378ae4eb6",
    "metadata": {},
    "outputs": [],
@@ -305,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "98167c31-2a32-45dc-af9d-5deb044d2148",
    "metadata": {},
    "outputs": [
@@ -315,7 +321,7 @@
        "'PythonPythonPython'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "3675d7f2-37b0-4ad1-95b9-fd154c13bcd7",
    "metadata": {},
    "outputs": [
